--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./main.css">
+    <title>Static Register Page</title>
 </head>
 <body>
     <header>
         <a href="#">About Us</a>
         <a href="#">Log in</a>
     </header>
-    <div>
+    <div class="container">
+        <header>
         <h1>Sign Up</h1>
+    </header>
         <form action="">
-            <div><input type="email" placeholder="Email" name="email" required></div>
-            <div><input type="text" placeholder="Username" name="username" required></div>
-            <div><input type="password" placeholder="Password" name="password" required></div>
-            <div><input type="password" placeholder="Confirm Passowrd" name="confirmPassword" required></div>
-            <div><button type="submit">Submit</button></div>
+            <div class="formInput"><input type="email" placeholder="Email" name="email" required></div>
+            <div class="formInput"><input type="text" placeholder="Username" name="username" required></div>
+            <div class="formInput"><input type="password" placeholder="Password" name="password" required></div>
+            <div class="formInput"><input type="password" placeholder="Confirm Password" name="confirmPassword" required></div>
+            <div class="formInput"><button type="submit">Submit</button></div>
         </form>
         <footer>
             <img src="./assets/AmazonLogo.png" alt="Amazon Icon" height="32" width="32">
